@@ -70,7 +70,8 @@
  * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
  * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
  * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- *	@(#)ex_proto.h	1.28 (gritter) 2/19/05
+ *
+ *	Sccsid @(#)ex_proto.h	1.29 (gritter) 8/4/05
  */
 
 /*
